--- a/Navv.html
+++ b/Navv.html
@@ -103,7 +103,7 @@ Model.pos = 0 ; //pos用于记录系统的当前单词
        
    
     <footer>
-        乐圣灵2024年10月12日
+        袁宇翔2024.10.12
     </footer>
     <script>
         const backgrounds = [
